force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/VG_Claim_Schedule_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Claim Schedule Line Items</label>
    <nameField>
        <label>CS Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Schedule Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>