force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/fields/VG_Asset__c.field-meta.xml
<CustomField>
    <fullName>VG_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Claim Schedule Line Items</relationshipLabel>
    <relationshipName>Claim_Schedule_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>