force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/fields/VG_Claims_Schedule__c.field-meta.xml
<CustomField>
    <fullName>VG_Claims_Schedule__c</fullName>
    <label>Claims Schedule</label>
    <referenceTo>Claims_Schedule__c</referenceTo>
    <relationshipLabel>Claim Schedule Line Items</relationshipLabel>
    <relationshipName>ClaimSchedule_LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>