force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/fields/VG_Policy_Endorsements__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Endorsements__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Endorsements</label>
    <referenceTo>VG_Policy_Schedule_Endorsement__c</referenceTo>
    <relationshipLabel>Claim Schedule Line Items</relationshipLabel>
    <relationshipName>Claim_Schedule_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>