force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/fields/VG_Risk_Details__c.field-meta.xml
<CustomField>
    <fullName>VG_Risk_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Details</label>
    <referenceTo>Risk_Capture__c</referenceTo>
    <relationshipLabel>Claim Schedule Line Items</relationshipLabel>
    <relationshipName>Claim_Schedule_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>