force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/recordTypes/Policy_Endorsement.recordType-meta.xml
<RecordType>
    <fullName>Policy_Endorsement</fullName>
    <active>true</active>
    <label>Policy Endorsement</label>
</RecordType>