force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/recordTypes/VG_Asset.recordType-meta.xml
<RecordType>
    <fullName>VG_Asset</fullName>
    <active>true</active>
    <label>Asset</label>
</RecordType>