force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/recordTypes/VG_Risk_Detail.recordType-meta.xml
<RecordType>
    <fullName>VG_Risk_Detail</fullName>
    <active>true</active>
    <label>Risk Detail</label>
</RecordType>