force-app/main/default/objects/VG_Claim_Schedule_Line_Items__c/recordTypes/VG_Risk_Rating.recordType-meta.xml
<RecordType>
    <fullName>VG_Risk_Rating</fullName>
    <active>true</active>
    <label>Risk Rating</label>
</RecordType>